version/0.12/_sources/api/solver/_autosummary/settings/inert_particle_child.rst.txt
:orphan:

.. _inert_particle_child:

inert_particle_child
====================

.. currentmodule:: ansys.fluent.core.solver.settings_231.inert_particle_child

.. autoclass:: inert_particle_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

================================================================   =======================================

Child                                                                                              Summary

================================================================   =======================================
:ref:`density <density_3>`                                                                'density' child.

:ref:`specific_heat <specific_heat_3>`                                              'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_3>`                         'thermal_conductivity' child.

:ref:`thermophoretic_co <thermophoretic_co>`                                    'thermophoretic_co' child.

:ref:`scattering_factor <scattering_factor>`                                    'scattering_factor' child.

:ref:`emissivity <emissivity>`                                                         'emissivity' child.

:ref:`viscosity <viscosity_2>`                                                          'viscosity' child.

:ref:`dpm_surften <dpm_surften>`                                                      'dpm_surften' child.

:ref:`electric_conductivity <electric_conductivity_1>`                      'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity_1>`       'dual_electric_conductivity' child.

:ref:`magnetic_permeability <magnetic_permeability>`                        'magnetic_permeability' child.

:ref:`charge_density <charge_density>`                                             'charge_density' child.

================================================================   =======================================

.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`inert_particle <inert_particle>`       'inert_particle' child.

======================================   ===========================

